<resources>
    <string name="app_name">Wood Working Tools</string>
    <string name="select_image">Select Image</string>
    <string name="home">Home</string>
    <string name="model_drawing">Model Drawing</string>
    <string name="settings">Settings</string>
    <string name="force_max_brightness">Force Max Brightness</string>
    <string name="enable_rotate_and_zoom">Enable Rotation and Zooming</string>
    <string name="enabled_edge_detection">Enable Edge Detection (Beta)</string>
    <string name="flip">Flip Image</string>
    <string name="flip_vertically">Vertically</string>
    <string name="flip_horizontally">Horizontally</string>
    <string name="version">Version</string>
    <string name="a_side">A Side Size</string>
    <string name="b_side">B Side Size</string>
    <string name="alpha_degree_title">Alpha Degree:</string>
    <string name="enter_valid_number">Enter a valid number</string>
    <string name="degree_calculator">Degree Calculator</string>
</resources>