<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

    <ImageView
        android:id="@+id/triangle_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/math_triangle"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/alpha_degree_title"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/alpha_degree_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toBottomOf="@id/triangle_image"
        app:layout_constraintStart_toStartOf="@id/guide_start" />


    <TextView
        android:id="@+id/alpha_degree_value"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textColor="#000"
        android:gravity="center"
        android:text="-"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintBottom_toBottomOf="@id/alpha_degree_title"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/alpha_degree_title"
        app:layout_constraintTop_toTopOf="@id/alpha_degree_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/a_size_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/a_side"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/alpha_degree_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/a_size_input_value"
            android:nextFocusDown="@id/b_size_input_layout"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="number"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/b_size_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/b_side"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/a_size_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/b_size_input_value"
            android:maxLines="1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


